--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^16.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "7.2.6",
     "react-router-dom": "6.0.1",
     "react-scripts": "5.0.1",
