--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "2.0",
+    "react-datepicker": "4.3.0",
     "react-dom": "^16.2.0",
     "react-quill": "^2.0.0",
     "react-redux": "7.2.6",
